--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,32 @@
         "stellarwp/container-contract": "1.0.4",
         "ext-json": "*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~6.0",
+        "lucatume/di52": "^3.0",
+        "lucatume/wp-browser": "^3.0.14",
+        "codeception/module-phpbrowser": "^1.0.0",
+        "codeception/module-asserts": "^1.0.0"
+    },
     "autoload": {
         "psr-4": {
             "StellarWP\\Validation\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "StellarWP\\Validation\\Tests\\": "tests/_support/Helper"
+        }
+    },
     "config": {
         "platform": {
-            "php": "7.0"
+            "php": "7.2"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/wordpress/wordpress-develop.git"
+        }
+    ]
 }
